FullSb1-27-apr-15/src/objects/FinanceVersion__c.object
<CustomObject>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <referenceTo>Opportunity_Finance__c</referenceTo>
        <relationshipLabel>FinanceVersions</relationshipLabel>
        <relationshipName>FinanceVersions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>FinanceVersions</relationshipLabel>
        <relationshipName>FinanceVersions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LatestVersion__c</fullName>
        <label>LatestVersion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriorVersion__c</fullName>
        <label>PriorVersion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>FinanceVersion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FV-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FinanceVersions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>